--- a/src/scss/user.scss
+++ b/src/scss/user.scss
@@ -1,12 +1,17 @@
 .user {
   padding: 10px;
+  max-width: 100%;
+
+  font-weight: 700;
+  font-size: 1.4rem;
+  display: flex;
+  align-items: center;
 
   &__name {
-    font-weight: 700;
-    font-size: 1.4rem;
-    display: flex;
-    align-items: center;
+    overflow-x: auto;
+    margin-right: 5px;
   }
+
   .star {
     margin-left: 5px;
     font-size: .7rem;
